[metadata]
name = osint-tool
version = 3.0.0

[options]
python_requires = >=3.9

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[coverage:run]
source = modules,utils,reporting
omit =
    */tests/*
    */venv/*
    */.venv/*

[coverage:report]
show_missing = true
skip_covered = false
fail_under = 40

[mypy]
python_version = 3.9
ignore_missing_imports = true
warn_return_any = false
